src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>APS_State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Subject__c</fullName>
        <description>Created for General RT to display subject value for email to case</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Territory_Name__c</fullName>
        <label>APS_Territory_Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Total_Number_of_Completed_First_Day__c</fullName>
        <label>Total Number of Completed First Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Total_Number_of_Completed_Insurance__c</fullName>
        <label>Total Number of Completed Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Total_Number_of_Completed_Medical__c</fullName>
        <label>Total Number of Completed Medical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Total_Number_of_Completed_SP_Traige__c</fullName>
        <label>Total Number of Completed SP Triage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Total_Number_of_Completed_SRF_Intake__c</fullName>
        <label>Total No of Completed Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Treating_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Treating Provider</description>
        <label>Treating Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Treating Provider)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Treatment_ID__c</fullName>
        <label>Treatment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Web_Email__c</fullName>
        <description>This field is created for Email to Case to display it in General Record Type.</description>
        <label>Web Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APS_Welcome_Call__c</fullName>
        <description>Auto updated when Task is completed</description>
        <label>Welcome Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Welcome_Letter_Mailed__c</fullName>
        <description>Updated Via integration</description>
        <label>Welcome Letter Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Welcome_Package_Mailed__c</fullName>
        <description>Updated Via Integration</description>
        <label>Welcome Package Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Welcome_Status__c</fullName>
        <description>Will show the progress of Welcome Status Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</description>
        <inlineHelpText>Will show the progress of Welcome Status Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</inlineHelpText>
        <label>Welcome Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(now() - CreatedDate) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aps_Consent_to_in_Home_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to in Home Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>Datevalue(LastModifiedDate) - Datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_created__c</fullName>
        <label>Case created</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Information</label>
        <referenceTo>LASH_Account_Address_Assignment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Access_Option__c</fullName>
        <label>Access Option</label>
        <picklist>
            <picklistValues>
                <fullName>none</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Add_Payer_Blurbs__c</fullName>
        <label>Add Payer Blurbs Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Authorization_Number__c</fullName>
        <label>Authorization Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_BV_Reason__c</fullName>
        <label>BV Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Best_Day_For_Call__c</fullName>
        <label>Best Day For Call</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LASH_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Case_Sub_Type__c</fullName>
        <label>Case Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Replacement Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presumptive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy and Bill -PAP Order (Manual, Retail Card, Automatic, Temporary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starter/Bridge Product Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Product Order to Distributor or SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Distribution Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional PAP Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Collect_Primary_Benefit_Profiles__c</fullName>
        <label>Collect Primary Benefit Profile Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Collect_Sec_Benefit_Profi_Status__c</fullName>
        <label>Collect Secondary Benefit Profi Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Collect_Tert_Benefit_Profile_Status__c</fullName>
        <label>Collect Tertiary Benefit Profile Stat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Communicate_Results__c</fullName>
        <label>Communicate Results Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Determine_BV_Results__c</fullName>
        <label>Determine BV Results Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Electronic_Checks_Status__c</fullName>
        <label>Electronic Checks Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Item</label>
        <referenceTo>LASH_Fulfillment_Item__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Generate_Summary_of_Benefits_Status__c</fullName>
        <label>Generate Summary of Benefits Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_IsBestDay__c</fullName>
        <formula>IF(ISBLANK( LASH_Best_Day_For_Call__c) ,true, 
contains(
IF(INCLUDES(  LASH_Best_Day_For_Call__c, &quot;Monday&quot; ), &quot;Monday &quot;,null ) &amp; 
IF(INCLUDES(  LASH_Best_Day_For_Call__c, &quot;Tuesday&quot; ), &quot;Tuesday &quot;,null ) &amp; 
IF(INCLUDES(  LASH_Best_Day_For_Call__c, &quot;Wednesday&quot; ),&quot;Wednesday &quot;,null ) &amp; 
IF(INCLUDES(  LASH_Best_Day_For_Call__c, &quot;Thursday&quot; ), &quot;Thursday &quot;,null ) &amp; 
IF(INCLUDES(  LASH_Best_Day_For_Call__c, &quot;Friday&quot; ), &quot;Friday &quot;,null ) &amp; 
IF(INCLUDES(  LASH_Best_Day_For_Call__c, &quot;Saturday&quot; ), &quot;Saturday; &quot;,null ) &amp; 
IF(INCLUDES(  LASH_Best_Day_For_Call__c, &quot;Sunday&quot; ), &quot;Sunday &quot;,null ) , 
CASE( MOD( datevalue(now()) - DATE( 1900, 1, 7 ), 7 ), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
&quot;Saturday&quot; )
)
)</formula>
        <label>IsBestDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Missing_required_fields__c</fullName>
        <label>Missing required fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LASH_Onhold_Reason__c</fullName>
        <label>Reason Onhold / Back to Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Not within Treatment Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payer Wait Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Intake Case</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>LASH_Order_Line_Items__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Drug Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presumptive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy and Bill -PAP Order (Manual, Retail Card, Automatic, Temporary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starter/Bridge Product Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Product Order to Distributor or SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Distribution Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional PAP Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_PA_Effective_Date__c</fullName>
        <label>PA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_PA_Expiration_Date__c</fullName>
        <label>PA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of BV flow and this establishes the relationship between case and patient.</description>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <infoMessage>Please select Patient record</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Patient)</relationshipLabel>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Prescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prescription</label>
        <referenceTo>LASH_Prescription__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Processing_Start_Date__c</fullName>
        <label>Processing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASH_Product_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Requestor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Product Requestor)</relationshipLabel>
        <relationshipName>Cases7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Product Fill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsequent Product Fill (Refill)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reshipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Returned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LASH_Queue_Count__c</fullName>
        <label>Queue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_Related_Benefit_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Benefit Profile</label>
        <referenceTo>LASH_Benefits_Profile__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Related_tPAP_PAP_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related tPAP/PAP Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Related tPAP/PAP Case)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response</label>
        <referenceTo>LASH_Integration_Response__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Review_Submission_Status__c</fullName>
        <label>Review Submission Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Ship_to_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Ship to Entity)</relationshipLabel>
        <relationshipName>Cases8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Stat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Status_Reason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open: Review Enrollment Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_BV_Effective_Date__c</fullName>
        <description>Date BV is effective for.</description>
        <label>BV Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_BV_Expiration_Date__c</fullName>
        <description>Date BV expires.</description>
        <label>BV Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_BV_Type__c</fullName>
        <description>new BV or Re-Verification</description>
        <label>BV Type</label>
        <picklist>
            <picklistValues>
                <fullName>New BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Verification</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_Best_End_Time_To_call__c</fullName>
        <label>Best End Time To call</label>
        <picklist>
            <controllingField>Lash_Best_Start_Time_To_call__c</controllingField>
            <picklistValues>
                <fullName>00:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_Best_Start_Time_To_call__c</fullName>
        <label>Best Start Time To call</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_Case_Queue__c</fullName>
        <label>Case Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lash_Case_Type__c</fullName>
        <label>Case  Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lash_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Lash_Client__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lash_Contact_History__c</fullName>
        <description>field to capture inbound/outbound contacts made for this case.</description>
        <label>Contact History</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lash_Date_of_Service__c</fullName>
        <description>date that treatment will be provided or drug is needed.</description>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_Determine_Eligibility__c</fullName>
        <label>Determine Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_Diagnosis_Codes__c</fullName>
        <description>appropriate diagnosis codes for case.</description>
        <label>Diagnosis Code(s)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lash_Eligibility_Begin__c</fullName>
        <label>Eligibility Begin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_Eligibility_End_Date__c</fullName>
        <label>Eligibility End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_Enrollment_Cycle__c</fullName>
        <label>Enrollment Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>